# bevy_test_scenes

./: Cargo.toml  README.md
examples/moving_shapes/: main.rs
examples/rotating_shapes/: main.rs
src/: lib.rs  moving_shapes.rs  random_mover.rs  rotating_shapes.rs  rotator.rs
