[package]
name = "bevy_test_scenes"
authors = ["Dirk Becker <dirk.christian.becker@gmail.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/DirkChristianBecker/bevy_test_scenes"
readme = "README.md"
description = "bevy_test_scenes is a collection of simple scenes for bevy."
license = "MIT"
keywords = ["gamedev", "bevy", "assets", "plugins"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "*" }